maze.lessons.maze.wallfollower.WallFollowerMaze.scala.error
Escaper:10: error: value && is not a member of Unit
  while(testGauche() && !estFaceMur())
                     ^Escaper:22: error: not found: value res
  return res
         ^Escaper:22: warning: enclosing method testGauche has result type Unit: return value discarded
  return res
  ^