maze.lessons.maze.wallfollower.WallFollowerMaze.scala.code
override def run() {
  while(!estSurBiscuit())
  {
		keepHandOnSideWall()
  }
  prendBiscuit()
}

def keepHandOnSideWall() {
  while(testGauche() && !estFaceMur())
  {
    avance()
  }
  droite()
}

def testGauche() {
  var test = false
  gauche()
  test = estFaceMur()
  droite()
  return res
}